Default to aot-jar when AOT is enabled
While the initial approach of introducing an effectiveType() method in
PackageConfig was cleaner, it was defeating the config tracking so I had
to revert to using a build item and propagating it everywhere... except
in the Gradle plugin, where things are rather hackyish...